Added libs directory for common JS files. Updated P4D iframe src.

--- a/stitch_report.css
+++ b/stitch_report.css
@@ -28,6 +28,12 @@
   text-decoration: underline;
 }
 
+.tagline {
+  font-size: 125%;
+  font-weight: normal;
+  font-style: italic;
+}
+
 h1.title {
   font-size: 150%;
   font-weight: bold;
